| Summary: | ASTERISK-29355: app_queue: Queue member status message sent even if status doesn't change | ||||
| Reporter: | Roman Pertsev (romkazor) | Labels: | ami patch queue | ||
| Date Opened: | 2021-03-18 10:41:27 | Date Closed: | 2021-03-22 07:51:01 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_queue Core/Stasis | ||
| Versions: | 13.38.2 16.16.2 17.9.3 18.2.2 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) ami_output.txt ( 1) ASTERISK-29355.diff ( 2) cli_queue_show_ringing.txt ( 3) cli_queue_show.txt ( 4) extensions.conf ( 5) queues.conf | |||
| Description: | 31 queues with same one agent with Local channel.
If we now call one of the queues, we will get almost 1000 AMI Events: QueueMemberStatus. This dramatically reduces performance. Configuration in attachment. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-03-18 10:41:28.578-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2021-03-18 10:49:07.544-0500 Please attach configuration examples as file attachments (this includes dialplan which you don't currently have), or formatting can interfere. As well please attach a complete Asterisk log including debug. The AMI traffic would also be needed. By: Roman Pertsev (romkazor) 2021-03-19 03:31:58.076-0500 Updated configuration and debug info. By: Joshua C. Colp (jcolp) 2021-03-19 04:20:28.361-0500 If you try this attached patch does it resolve the issue? By: Roman Pertsev (romkazor) 2021-03-19 04:55:23.384-0500 Thanks for ultra fast answer. Your patch is perfect and resolve problem!!! By: Roman Pertsev (romkazor) 2021-03-19 04:59:04.655-0500 ASTERISK-28165 can be closed too! Big Thanks! By: Friendly Automation (friendly-automation) 2021-03-22 07:51:03.027-0500 Change 15636 merged by Joshua Colp: app_queue: Only send QueueMemberStatus if status changes. [https://gerrit.asterisk.org/c/asterisk/+/15636|https://gerrit.asterisk.org/c/asterisk/+/15636] By: Friendly Automation (friendly-automation) 2021-03-22 07:51:23.195-0500 Change 15648 merged by Joshua Colp: app_queue: Only send QueueMemberStatus if status changes. [https://gerrit.asterisk.org/c/asterisk/+/15648|https://gerrit.asterisk.org/c/asterisk/+/15648] By: Friendly Automation (friendly-automation) 2021-03-22 07:51:40.752-0500 Change 15649 merged by Joshua Colp: app_queue: Only send QueueMemberStatus if status changes. [https://gerrit.asterisk.org/c/asterisk/+/15649|https://gerrit.asterisk.org/c/asterisk/+/15649] | ||||